# master-thesis

./: .gitignore  README.md  pyproject.toml  requirements-min.txt  requirements.txt
data/: te_alarm_thresholds.csv  te_knowledge_base.generated.jsonl  te_knowledge_base.jsonl  te_variable_mapping.csv
deploy/k8s/: ollama-pod.yaml
docs/: te_alarm_rag_spec.md
src/alarm_rag/: __init__.py  build_kb_from_rdata.py  cli.py  embeddings.py  llm.py  pipeline.py  rag.py  types.py  vector_store.py
