[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alarm-rag"
version = "0.1.0"
description = "Alarm flood RAG pipeline for Tennessee Eastman fault diagnosis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0,<3.0",
]

[project.optional-dependencies]
rdata = [
  "pyreadr>=0.5,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
